--- a/relab-client/src/app/app.component.html
+++ b/relab-client/src/app/app.component.html
@@ -1,9 +1,36 @@
 <h1>Angular Google Maps (AGM) Demo</h1>
 
-<agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom" [zoomControl]="true">
+<agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom" [zoomControl]="true" 
+(mapClick)="mapClicked($event)">
+
+
+  <agm-marker *ngFor="let m of markers" 
+    [latitude]="m.lat" [longitude]="m.lng" [label]="m.label"  [iconUrl]="m.icon"
+  >
+  </agm-marker>
+
   <agm-data-layer [geoJson]="geoJsonObject" [style]="styleFunc">
   </agm-data-layer>
-</agm-map><agm-marker *ngFor="let m of markers"
-    [latitude]="m.lat" [longitude]="m.lng" [label]="m.label"
- >
-</agm-marker>
+
+  <agm-circle [latitude]="circleLat" [longitude]="circleLng" 
+      [radius]="radius"
+      [fillColor]="'red'"
+      [circleDraggable]="true"
+      [editable]="true"
+      (radiusChange) = circleRedim($event)
+      (circleDblClick) = circleDoubleClicked($event)
+      >
+  </agm-circle>
+
+</agm-map>
+
+<form>
+  <h3 >Vettori energetici</h3>
+  <div>
+    <input name="title" #foglio> <!--Aggiunta una variabile di template-->
+    <label for="title">Seleziona foglio</label>
+  </div>
+  <button (click)="cambiaFoglio(foglio)"> <!--Passiamo le variabili come parametro --> 
+    Cambia
+  </button>
+</form>
